Tambah Thread dan Revisi Code

--- a/explore_sending_email/nbproject/project.properties
+++ b/explore_sending_email/nbproject/project.properties
@@ -24,16 +24,20 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/explore_sending_email.jar
+dist.jar=${dist.dir}/UasKel.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.activation-1.1.1.jar=activation-1.1.1.jar
 file.reference.activation.jar=C:\\Users\\AGS\\Downloads\\jaf-1_1_1\\jaf-1.1.1\\activation.jar
 file.reference.javax.mail.jar=C:\\Users\\AGS\\Downloads\\javax.mail.jar
+file.reference.mail-1.5.0-b01.jar=mail-1.5.0-b01.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.activation.jar}:\
-    ${file.reference.javax.mail.jar}
+    ${file.reference.javax.mail.jar}:\
+    ${file.reference.mail-1.5.0-b01.jar}:\
+    ${file.reference.activation-1.1.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -58,7 +62,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=explore_sending_email.Explore_sending_email
+main.class=id.ac.polban.jtk.oop.MainClass
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
