--- a/explore_sending_email/build.xml
+++ b/explore_sending_email/build.xml
@@ -7,8 +7,8 @@
 <!-- the Compile on Save feature is turned off for the project. -->
 <!-- You can turn off the Compile on Save (or Deploy on Save) setting -->
 <!-- in the project's Project Properties dialog box.-->
-<project name="explore_sending_email" default="default" basedir=".">
-    <description>Builds, tests, and runs the project explore_sending_email.</description>
+<project name="UasKel" default="default" basedir=".">
+    <description>Builds, tests, and runs the project UasKel.</description>
     <import file="nbproject/build-impl.xml"/>
     <!--
 
@@ -58,7 +58,7 @@
 
     An example of overriding the target for project execution could look like this:
 
-        <target name="run" depends="explore_sending_email-impl.jar">
+        <target name="run" depends="UasKel-impl.jar">
             <exec dir="bin" executable="launcher.exe">
                 <arg file="${dist.jar}"/>
             </exec>
