--- a/explore_sending_email/nbproject/project.properties
+++ b/explore_sending_email/nbproject/project.properties
@@ -27,17 +27,13 @@ dist.dir=dist
 dist.jar=${dist.dir}/UasKel.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
-file.reference.activation-1.1.1.jar=activation-1.1.1.jar
-file.reference.activation.jar=C:\\Users\\AGS\\Downloads\\jaf-1_1_1\\jaf-1.1.1\\activation.jar
-file.reference.javax.mail.jar=C:\\Users\\AGS\\Downloads\\javax.mail.jar
-file.reference.mail-1.5.0-b01.jar=mail-1.5.0-b01.jar
+file.reference.activation.jar-1=activation.jar
+file.reference.javax.mail.jar-1=javax.mail.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.activation.jar}:\
-    ${file.reference.javax.mail.jar}:\
-    ${file.reference.mail-1.5.0-b01.jar}:\
-    ${file.reference.activation-1.1.1.jar}
+    ${file.reference.activation.jar-1}:\
+    ${file.reference.javax.mail.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
